--- a/aula14_22112021_mesadetrabalho/package.json
+++ b/aula14_22112021_mesadetrabalho/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "aula09_09112021_cpi",
+  "name": "aula14_22112021_mesadetrabalho",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "sass": "^1.43.4"
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
